# Kromblastcpp

./: .gitignore  .gitmodules  README.md  basic.cc  config.json  kromblast.ini  kromblast.json  kromblast.wrap  l.py  lib_exemple.cc  lib_exemple2.cc  meson.build  t.txt  test.sh  valgrind.json
.github/flow/: macports-ci
.github/workflows/: artifact.yml  create_version.yml  release.yml  test.yml
changelog/: v1.md
command/: valgrind.sh
lib_test/: lib_exemple.cc  lib_exemple2.cc  lib_exemple3.cpp
libs/: krom_lib.h  kromblast.cc  kromblast.h
libs/kromblast/: kromblast.cc  kromblast.h  kromblast_library.h
libs/kromblast/core/: kb_lib_class.h  kb_lib_core.h  kb_lib_kromblast.h  kb_lib_struct.h
libs/kromblast/lib/: kromblast_library.h
libs/kromblast/utils/: function_call.cc  function_call.h  load_lib.cc  load_lib.h
src/: decode_config.cpp  main.cpp
src/config/: argsparse_config.cpp  argsparse_config.hpp  config_constructor.cpp  config_constructor.hpp  ini_config.hpp  json_config.cpp  json_config.hpp  utils.cpp  utils.hpp
src/include/: kb_lib_class.hpp  kb_lib_core.hpp  kb_lib_kromblast.hpp  kb_lib_signal.hpp  kb_os.hpp  kromblast_compiler_utils.hpp  kromblast_lib_config.hpp  kromblast_lib_plugin.hpp  kromblast_lib_plugin_callback.hpp
src/include/api/: kromblast_api.hpp  kromblast_api_dispatcher.hpp  kromblast_api_logger.hpp  kromblast_api_plugin.hpp  kromblast_api_plugin_utils.hpp  kromblast_api_signal.hpp  kromblast_api_window.hpp
src/includes/: kb_lib_struct.hpp
src/kromblast/: dispatcher.hpp  kromblast.cpp  kromblast.hpp  kromblastlib.cpp  listener.cpp  listener.hpp  logger.hpp  plugin.hpp  signal.hpp  window.cpp  window.hpp
src/kromblast/src/: dispatcher.cpp  kromblast.cpp  logger.cpp  plugin.cpp  signal.cpp  window.cpp
src/libs/webview/: webview.h
src/mode/: kromblast_mode.hpp  mode.cpp
src/utils/: function_call.cpp  function_call.hpp  load_lib.cpp  load_lib.hpp
subprojects/: cpp-httplib.wrap  nlohmann-json.wrap  webview-meson.wrap
test/: index.html
